--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,8 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+# Exclude GitHub-specific files from downloads
+/.github/* export-ignore
+/.gitignore export-ignore
+/.gitattributes export-ignore
+/tests/* export-ignore
+/docs/* export-ignore
+/readme-dev.md export-ignore
+/README.md export-ignore 
